# advent-of-code

./: .gitignore
2015/php/: composer.json
2015/php/app/Commands/: RunDay.php
2015/php/app/Days/: Day.php  Day1.php  Day2.php  Day3.php  Day4.php  Day5.php  Day6.php  Day7.php  Day8.php
2015/php/config/: app.php
2015/php/tests/Feature/: Day2Test.php  Day3Test.php  Day4Test.php  Day5Test.php  Day6Test.php  Day7Test.php  Day8Test.php
2015/php/tests/inputs/: day2
2015/rust/: Cargo.toml
2021/go/: go.mod
2021/go/day0/: main.go
2021/go/day1/: main.go
2021/go/day2/: main.go
2022/php/app/Days/: CalorieHunting.php
2022/rust/: Cargo.toml
2022/rust/day-04/src/: main.rs
2022/rust/day-06/src/: main.rs
2022/rust/day-07/: Cargo.toml
2022/rust/src/examples/: day-13.txt
2022/rust/src/helpers/: grid.rs
2022/rust/src/inputs/: day-05-1.rs.txt
2023/go/: go.mod
2023/go/day0/: main.go
2023/go/day1/: main.go
2023/go/day2/: main.go
2023/go/day3/: main.go
2023/go/day4/: main.go
2023/go/day5/: main.go
2023/go/day6/: main.go
2024/go/: go.mod  go.sum
2024/go/coordinates/: coordinates.go
2024/go/day0/: main.go
2024/go/day1/: main.go
2024/go/day10/: input.txt  main.go
2024/go/day11/: main.go
2024/go/day12/: main.go
2024/go/day2/: input.txt  main.go
2024/go/day3/: input.txt  main.go
2024/go/day4/: main.go
2024/go/day5/: main.go
2024/go/day6/: main.go
2024/go/day7/: main.go
2024/go/day8/: main.go
2024/go/day9/: input.txt  main.go
2024/go/grid/: grid.go  grid_test.go
2024/go/matrix/: matrix.go  matrix_test.go
(+6 files in other folders)
