[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.7.0"
anyhow = "1.0.66"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
