[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.7.0"
anyhow = "1.0.66"
hashbrown = "0.13.1"
fs-err = "2.9.0"
color-eyre = "0.6.2"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
derive_more = "0.99.17"
nom = "7.1.1"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
